# Neuron-OS

./: CMakeLists.txt  FindLibNeuro.cmake  Kconfig  README.md  cmakereview.txt  config.cmake  version.h.in
arch/: Kconfig
arch/arm/: Kconfig  common_arm_mmu.lds  common_arm_nommu.lds  config.cmake
arch/arm/drivers/console/: multi_console.c
arch/arm/drivers/delay_timer/: delay_timer.c  generic_delay_timer.c
arch/arm/drivers/gic/common/: gic_common.c  gic_common_private.h
arch/arm/drivers/gic/v2/: gicdv2_helpers.c  gicv2_helpers.c  gicv2_main.c  gicv2_private.h
arch/arm/drivers/gic/v3/: arm_gicv3_common.c  gic-x00.c  gic600_multichip.c  gic600_multichip_private.h  gic600ae_fmu.c  gic600ae_fmu_helpers.c  gicrv3_helpers.c  gicv3_helpers.c  gicv3_main.c  gicv3_private.h
arch/arm/drivers/pl011/aarch32/: pl011_console.S
arch/arm/drivers/pl011/aarch64/: pl011_console.S
arch/arm/drivers/smmu/: smmu_v3.c
arch/arm/include/: common.h  common.ld.h  context_mgmt.h  cpu_data.h  debug.h  exp_desc.h
arch/arm/include/drivers/console/: console.h
arch/arm/include/drivers/gic/: gic_common.h  gicv2.h  gicv3.h
arch/arm/include/drivers/pl011/: pl011.h
arch/arm/include/drivers/smmu/: smmu_v3.h
arch/arm/include/kernel/aarch32/: arch.h  asm_macros.S  common_macros.S  console_macros.S
arch/arm/include/kernel/aarch32/runtime/: context.h
arch/arm/include/kernel/aarch64/: arch.h  arch_features.h  arch_helpers.h  asm_macros.S  common_macros.S  console_macros.S
arch/arm/include/kernel/aarch64/runtime/: context.h
arch/arm/include/lib/xlat_mpu/: xlat_mpu.h
arch/arm/include/lib/xlat_tables/: xlat_tables_defs.h  xlat_tables_v2_helpers.h
arch/arm/include/lib/xlat_tables/aarch32/: xlat_tables_aarch32.h
arch/arm/include/lib/xlat_tables/aarch64/: xlat_tables_aarch64.h
arch/arm/kernel/: bootstrap.c  c_traps.c  cpu_data_array.c  log.c  mmu.c  process.c  stack_protector.c
arch/arm/kernel/aarch32/: c_traps.c  config.cmake  debug.S  entrypoint.S  idle.c  traps.S
arch/arm/kernel/aarch32/mach/: cache.S  misc_helpers.S
arch/arm/kernel/aarch32/runtime/: context.S  context_mgmt.c  cpu_data.S
arch/arm/kernel/aarch64/: asm_traps_helper.S  c_traps.c  config.cmake  debug.S  entrypoint.S  idle.c  traps.S
arch/arm/kernel/aarch64/mach/: cache.S  misc_helpers.S
arch/arm/kernel/aarch64/runtime/: context.S  context_mgmt.c  cpu_data.S
arch/arm/lib/backtrace/: backtrace.c
arch/arm/lib/xlat_mpu/: xlat_mpu_context.c  xlat_mpu_core.c  xlat_mpu_utils.c
arch/arm/lib/xlat_mpu/aarch64/: xlat_mpu_arch.c
arch/arm/lib/xlat_tables/: xlat_tables_common.c  xlat_tables_private.h
arch/arm/lib/xlat_tables/aarch32/: nonlpae_tables.c  xlat_tables.c
arch/arm/lib/xlat_tables/aarch64/: xlat_tables.c
arch/arm/lib/xlat_tables_v2/: xlat_tables_context.c  xlat_tables_core.c  xlat_tables_utils.c
arch/arm/lib/xlat_tables_v2/aarch32/: xlat_tables_arch.c
arch/arm/lib/xlat_tables_v2/aarch64/: xlat_tables_arch.c
arch/arm/qemu/: qemu_bl1_setup.c  qemu_common.c  qemu_console.c  qemu_gicv2.c  qemu_gicv3.c  qemu_stack_protector.c
arch/arm/qemu/aarch32/: plat_helpers.S
arch/arm/qemu/aarch64/: plat_helpers.S
arch/arm/qemu/include/: platform_def.h
entry/: ep_main.c
include/: cassert.h  util.h
include/lib/libc/: assert.h
kernel/: threadX.c
lib/libc/: abort.c  assert.c  printf.c  putchar.c  snprintf.c
mm/: core.c
plat/: Kconfig  Kconfig.defconfig
plat/am335x/: Kconfig  am335x_defconfig  config.cmake
scripts/cmake/: gcc.cmake  helpers.cmake  internal.cmake  llvm.cmake  rm.cmake  version.cmake
scripts/dts/: hardware_schema.yml
scripts/kconfig/: kconfig.py  lint.py  menuconfig.py
soc/: Kconfig
soc/cortex-a9/: Kconfig
